Thu Aug 17 08:51:45 2000  Adam Fedor  <fedor@ultra.doc.com>

	* Headers/gnustep/gui/NSLayoutManager.h: Add hyphenation 
	prototypes (patch from Jeff Teunissen <deek@dusknet.dhs.org>).

2000-08-07  Adam Fedor  <fedor@gnu.org>

	* Merge 0.6.6 branch into main.

2000-08-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/gui/NSEvent.h: Support middle mouse button
	* Headers/gnustep/gui/NSResponder.h: ditto
	* Source/Functions.m: ditto
	* Source/GSComboSupport.m: ditto
	* Source/NSApplication.m: ditto
	* Source/NSCell.m: ditto
	* Source/NSControl.m: ditto
	* Source/NSEvent.m: ditto
	* Source/NSGraphicsContext.m: ditto
	* Source/NSMenuView.m: ditto
	* Source/NSResponder.m: ditto
	* Source/NSWindow.m: ditto

2000-07-30 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundleAdditions.m: patch by borgheron@yahoo.com to simplify
	loading of gmodel files.

2000-08-06  Adam Fedor  <fedor@gnu.org>

	* Version 0.6.6 released.

Sun Aug  6 18:43:13 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSBrowser.m ([NSBrowser -doClick:]): Removed safety check
	which was preventing subclasses of NSBrowserCell to work properly 
	with a browser.

Sat Aug  5 02:03:24 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSTextFieldCell.m ([NSTextFieldCell -initTextCell:]):
	Reverted last change - do not draw background by default.

2000-08-04  Adam Fedor  <fedor@gnu.org>

	* Source/NSWorkspace.m ([_GSWorkspaceCenter -postNotification:]):
	Add user default "GSLogWorkspaceTimeout" to log rather than raise
	an exception during remote notification.

2000-08-03  Adam Fedor  <fedor@gnu.org>

	* Source/NSWindow.m (-setFrameFromString:): Don't set display flag
	if window not visible.

	* Source/NSBezierPath.m (-initWithCoder): Don't call super.
	(encodeWithCoder:): Likewise. 
	
2000-08-02  Adam Fedor  <fedor@gnu.org>

	* Version: Update version number
	* Documentation/announce.tmpl.texi: Update
	* Documentation/readme.tmpl.texi: Likewise.